Stacks/05_Firewalls.yml
Resources:
  PublicACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !ImportValue VPC
      Tags:
        - Key: Name
          Value: PublicACL
  PublicACLInboundSecurityGroupAllowAllRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicACL
      RuleNumber: 100
      Protocol: -1
      Egress: false
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
  PublicACLOutboundSecurityGroupAllowAllRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicACL
      RuleNumber: 100
      Protocol: -1
      Egress: true
      RuleAction: allow
      CidrBlock: 0.0.0.0/0

  PrivateACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !ImportValue VPC
      Tags:
        - Key: Name
          Value: PrivateACL
  PrivateACLInboundSecurityGroupAllowAllLocalRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PrivateACL
      RuleNumber: 100
      Protocol: -1
      Egress: false
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
  PrivateACLOutboundSecurityGroupAllowAllLocalRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PrivateACL
      RuleNumber: 100
      Protocol: -1
      Egress: true
      RuleAction: allow
      CidrBlock: 0.0.0.0/0

  DBACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !ImportValue VPC
      Tags:
        - Key: Name
          Value: DBACL
  DBACLInboundSecurityGroupAllowAllPrivateRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref DBACL
      RuleNumber: 110
      Protocol: -1
      Egress: false
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
  DBACLOutboundSecurityGroupAllowAllPrivateRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref DBACL
      RuleNumber: 100
      Protocol: -1
      Egress: true
      RuleAction: allow
      CidrBlock: 0.0.0.0/0

  ACLAssociationPublicSubnet1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !ImportValue PublicSubnet1
      NetworkAclId: !Ref PublicACL
  ACLAssociationPublicSubnet2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !ImportValue PublicSubnet2
      NetworkAclId: !Ref PublicACL
  ACLAssociationPublicSubnet3:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !ImportValue PublicSubnet3
      NetworkAclId: !Ref PublicACL
  ACLAssociationPrivateSubnet1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !ImportValue PrivateSubnet1
      NetworkAclId: !Ref PrivateACL
  ACLAssociationPrivateSubnet2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !ImportValue PrivateSubnet2
      NetworkAclId: !Ref PrivateACL
  ACLAssociationPrivateSubnet3:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !ImportValue PrivateSubnet3
      NetworkAclId: !Ref PrivateACL
  ACLAssociationDBSubnet1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !ImportValue DBSubnet1
      NetworkAclId: !Ref DBACL
  ACLAssociationDBSubnet2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !ImportValue DBSubnet2
      NetworkAclId: !Ref DBACL
  ACLAssociationDBSubnet3:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !ImportValue DBSubnet3
      NetworkAclId: !Ref DBACL

  ALBSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: ALB Security Group
      VpcId: !ImportValue VPC
  ALBSecurityGroupAllowAllOutboundRule:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: -1
      CidrIp: "0.0.0.0/0"
      GroupId: !GetAtt ALBSecurityGroup.GroupId
  ALBSecurityGroupAllowAllInboundRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: -1
      CidrIp: "0.0.0.0/0"
      GroupId: !GetAtt ALBSecurityGroup.GroupId

  NATSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: NAT Instances Security Group
      VpcId: !ImportValue VPC
  NATSecurityGroupAllowAllOutboundRule:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: -1
      CidrIp: "0.0.0.0/0"
      GroupId: !GetAtt NATSecurityGroup.GroupId
  NATSecurityGroupAllowLocalInboundRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: -1
      CidrIp: "10.0.0.0/16"
      GroupId: !GetAtt NATSecurityGroup.GroupId
  
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !ImportValue VPC
      GroupDescription: EC2 Security Group
  EC2SecurityGroupAllowAllOutboundRule:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: -1
      CidrIp: "0.0.0.0/0"
      GroupId: !GetAtt EC2SecurityGroup.GroupId
  EC2SecurityGroupAllowSSHInboundRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: TCP
      CidrIp: "0.0.0.0/0"
      FromPort: 22
      ToPort: 22
      GroupId: !GetAtt EC2SecurityGroup.GroupId
  EC2SecurityGroupAllowHTTPInboundRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: TCP
      CidrIp: "0.0.0.0/0"
      FromPort: 80
      ToPort: 80
      GroupId: !GetAtt EC2SecurityGroup.GroupId
  EC2SecurityGroupAllowALBportsInboundRule:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      GroupId: !Ref EC2SecurityGroup
      SourceSecurityGroupId: !Ref ALBSecurityGroup 
      IpProtocol: -1

  ECSSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: ECS Security Group
      VpcId: !ImportValue VPC
  ECSSecurityGroupAllowAllOutboundRule:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: -1
      CidrIp: "0.0.0.0/0"
      GroupId: !GetAtt ECSSecurityGroup.GroupId
  ECSSecurityGroupAllowSSHInboundRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: TCP
      CidrIp: "0.0.0.0/0"
      FromPort: 22
      ToPort: 22
      GroupId: !GetAtt ECSSecurityGroup.GroupId
  ECSSecurityGroupAllowHTTPInboundRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: TCP
      CidrIp: "0.0.0.0/0"
      FromPort: 80
      ToPort: 80
      GroupId: !GetAtt ECSSecurityGroup.GroupId
  ECSSecurityGroupAllowALBportsInboundRule:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      GroupId: !Ref ECSSecurityGroup
      SourceSecurityGroupId: !Ref ALBSecurityGroup 
      IpProtocol: -1

  ECSTaskSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !ImportValue VPC
      GroupDescription: ECS Task Security Group
  ECSTaskSecurityGroupAllowAllOutboundRule:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: -1
      CidrIp: "0.0.0.0/0"
      GroupId: !GetAtt ECSTaskSecurityGroup.GroupId
  ECSTaskSecurityGroupAllowSSHInboundRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: TCP
      CidrIp: "0.0.0.0/0"
      FromPort: 22
      ToPort: 22
      GroupId: !GetAtt ECSTaskSecurityGroup.GroupId
  ECSTaskSecurityGroupAllowHTTPInboundRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: TCP
      CidrIp: "0.0.0.0/0"
      FromPort: 80
      ToPort: 80
      GroupId: !GetAtt ECSTaskSecurityGroup.GroupId
  ECSTaskSecurityGroupAllowALBportsInboundRule:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      GroupId: !Ref ECSTaskSecurityGroup
      SourceSecurityGroupId: !Ref ALBSecurityGroup 
      IpProtocol: -1

Outputs:
  NATSecurityGroup:
    Description: A reference to the NAT Instances Security Group
    Value: !Ref NATSecurityGroup
    Export:
      Name: NATSecurityGroup
  ALBSecurityGroup:
    Description: A reference to the ALB Security Group
    Value: !Ref ALBSecurityGroup
    Export:
      Name: ALBSecurityGroup
  EC2SecurityGroup:
    Description: A reference to the EC2 Security Group
    Value: !Ref EC2SecurityGroup
    Export:
      Name: EC2SecurityGroup
  ECSSecurityGroup:
    Description: A reference to the ECS Security Group
    Value: !Ref ECSSecurityGroup
    Export:
      Name: ECSSecurityGroup
  ECSTaskSecurityGroup:
    Description: A reference to the ECS Task Security Group
    Value: !Ref ECSTaskSecurityGroup
    Export:
      Name: ECSTaskSecurityGroup
